[project]
name = "hall-of-fame-debater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "mcp-server-fetch>=2025.4.7",
    "mcp[cli]>=1.26.0",
    "nba-api>=1.11.4",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "openai-agents>=0.10.4",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
